# photo-search

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: codeql.yml  pr.yml  pre-release.yml  release.yml
.models/: download.sh
client/: eslint.config.cjs  index.html  package.json  pnpm-lock.yaml  vite.config.ts
client/src/: App.tsx  Layout.css  Layout.tsx  index.css  index.scss  main.tsx
client/src/components/: FilterDialog.tsx  FilterSettings.tsx  LoginButton.tsx  LogoutButton.scss  LogoutButton.tsx  PerfectCentered.tsx  Photo.tsx  PhotoContainer.css  PhotoContainer.scss  PhotoContainer.tsx  PhotoFilterControls.css  PhotoFilterControls.scss  PhotoFilterControls.tsx  PhotoResults.tsx  PhotoTile.tsx  PhotoWithRetry.scss  PhotoWithRetry.tsx  SearchBox.css  SearchBox.scss  SearchBox.tsx  ViewPhoto.tsx  index.ts
client/src/layouts/: Layout.css  MainLayout.tsx  PhotosLayout.tsx  index.ts
client/src/pages/: ErrorPage.tsx  Home.css  Home.scss  Home.tsx  Login.tsx  index.ts
client/src/services/: AuthConfig.ts  Errors.ts  PhotoService.ts  index.ts
containers/: embedding-server.Dockerfile  indexing.Dockerfile  web-server.Dockerfile
embeddings/: index-photos.py  server.py  server.sh  setup.sh
indexing/: Cargo.toml  README.md
indexing/src/: embedding.rs  main.rs  metadata.rs
srv/embeddings/: Cargo.toml
srv/embeddings/src/: embedding.rs  error.rs  handler.rs  main.rs
srv/web/: README.md  authenticationMiddleware.go  errors.go  go.mod  go.sum  health.go  internalServer.go  publicServer.go  serverContext.go  spaHandler.go  web.go
srv/web/models/: internalServer.go  publicServer.go
