[workspace]
resolver = "2"

members = [
    "indexing",
    "srv/embeddings",
]

[workspace.dependencies]
anyhow = "1.0.100"
candle-core = "0.9.0"
candle-nn = "0.9.0"
candle-transformers = "0.9.0"
chrono = "0.4.42"
clap = "4.5.51"
image = { version = "0.25.8", default-features = false }
json = "0.12.4"
nom-exif = "2.5.4"
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["http2", "blocking", "json"] }
scan_dir = "0.3.3"
serde = "1.0.228"
serde_json = "1.0.145"
tokenizers = { version = "0.22.1", default-features = false }
tokio = "1.48.0"
warp = "0.4.2"
