[workspace]
resolver = "2"

members = [
    "indexing",
    "srv/embeddings",
]

[workspace.dependencies]
anyhow = "1.0.102"
bytes = "1.11.1"
candle-core = "=0.9.1"
candle-nn = "=0.9.1"
candle-transformers = "=0.9.1"
chrono = "0.4.44"
clap = "4.6.0"
image = { version = "0.25.10", default-features = false }
json = "0.12.4"
nom-exif = "2.6.1"
regex = "1.12.3"
reqwest = { version = "0.13.2", default-features = false, features = ["http2", "blocking", "json", "query"] }
scan_dir = "0.3.3"
serde = "1.0.228"
serde_json = "1.0.149"
tokenizers = { version = "0.22.2", default-features = false }
tokio = "1.52.1"
warp = "0.4.2"
