[package]
name = "indexing"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
candle-core = "0.6.0"
candle-nn = "0.6.0"
candle-transformers = "0.6.0"
clap = { version = "4.5.11", features = ["derive"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
