[package]
name = "indexing"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
candle-core.workspace = true
candle-nn.workspace = true
candle-transformers.workspace = true
clap = { workspace = true, features = ["derive"] }
image = { workspace = true, features = ["jpeg"] }
scan_dir.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokenizers = { workspace = true, features = ["onig"] }
