[package]
name = "embeddings"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.97", features = ["backtrace"] }
candle-core = "0.8.4"
candle-nn = "0.8.3"
candle-transformers = "0.8.3"
clap = { version = "4.5.32", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokenizers = { version = "0.21.1", default-features = false, features = ["onig"] }
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
warp = "0.3.7"
